tests/fixtures/errors/union_arm_private.z
# Sum-type arm constructors are members: an arm omitted from `public:` is private
# and cannot be constructed from outside. Only `circle` (circleArm) is public.
shape: union { circleArm: i64 boxArm: i64 } as {
    public: unit { circle: circleArm }
}

main: function is {
    s: shape.boxArm 5
    print "made"
}
